--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
 
             </div>
         </nav>
+        <button class="btn btn-danger" id="btnDeleteAllTask" >Delete All Task</button>
+
     </header>
 
     <main>
@@ -107,6 +109,8 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
         <script src="./scripts/task.js"></script>
         <script src="./scripts/app.js"></script>
+        <script src="./scripts/test.js"></script>
+
     </body>
 </html>
 
